# onnx_cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  onnx.code-workspace  onnx_model  onnx_model.cpp  onnx_model.h
